--- a/index.html
+++ b/index.html
@@ -6,16 +6,15 @@
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   
-  <title>Frontend Mentor | IP Address Tracker</title>
+  <title>IP Address Tracker</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
     .attribution { font-size: 11px; text-align: center; }
     .attribution a { color: hsl(228, 45%, 44%); }
   </style>
 </head>
 <body>
-
+<!-- 
   IP Address Tracker
 
   Search for any IP address or domain
@@ -23,8 +22,10 @@
   IP Address
   Location
   Timezone
-    UTC <!-- add offset value dynamically using the API -->
-  ISP
+  UTC
+  ISP 
+-->
+  <!-- add offset value dynamically using the API -->
   
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
