--- a/index.html
+++ b/index.html
@@ -34,17 +34,17 @@
   <section id="hero" class="hero">
     <div class="container position-relative">
       <div class="row gy-5" data-aos="fade-in">
-        <div class="col-lg-12 order-2 order-lg-1 d-flex flex-column justify-content-center text-center text-lg-start">
+        <div class="col-lg-6 order-2 order-lg-1 d-flex flex-column justify-content-center text-center text-lg-start">
           <h2 class="text-center">IP Address Tracker</h2>
-          <!-- <p>Sed autem laudantium dolores. Voluptatem itaque ea consequatur eveniet. Eum quas beatae cumque eum quaerat.</p> -->
-          <!-- <div class="d-flex justify-content-center justify-content-lg-start">
+          <p>Sed autem laudantium dolores. Voluptatem itaque ea consequatur eveniet. Eum quas beatae cumque eum quaerat.</p> 
+          <div class="d-flex justify-content-center justify-content-lg-start">
             <a href="#about" class="btn-get-started">Get Started</a>
             <a href="https://www.youtube.com/watch?v=LXb3EKWsInQ" class="glightbox btn-watch-video d-flex align-items-center"><i class="bi bi-play-circle"></i><span>Watch Video</span></a>
-          </div> -->
+          </div>
         </div>
-        <!-- <div class="col-lg-6 order-1 order-lg-2">
+         <div class="col-lg-6 order-1 order-lg-2">
           <img src="assets/img/hero-img.svg" class="img-fluid" alt="" data-aos="zoom-out" data-aos-delay="100">
-        </div> -->
+        </div> 
       </div>
     </div>
 
@@ -52,51 +52,48 @@
       <div class="container position-relative">
         <div class="row gy-4 mt-5">
           <!-- data-aos="fade-up" data-aos-delay="100" -->
-          <div class="col-xl-12 col-md-12" >
-            <div class="row">
-              <div class="col-md-3">1</div>
-              <div class="col-md-3">2</div>
-              <div class="col-md-3">3</div>
-              <div class="col-md-3">4</div>
-            </div>
+          <div class="col-xl-3 col-md-6" data-aos="fade-up" data-aos-delay="200">
 
-            <!-- <div class="icon-box">
-              <div class="icon"><i class="bi bi-easel"></i></div>
-              <h4 class="title"><a href="" class="stretched-link">Lorem Ipsum</a></h4>
-            </div> -->
+            <div class="icon-box">
+              <!-- <div class="icon"><i class="bi bi-easel"></i></div> -->
+              <h4 class="title"><a href="" class="stretched-link">IP Address</a></h4>
+            </div>
 
           </div><!--End Icon Box -->
 
-          <!-- <div class="col-xl-3 col-md-6" data-aos="fade-up" data-aos-delay="200">
+          <div class="col-xl-3 col-md-6" data-aos="fade-up" data-aos-delay="200">
             <div class="icon-box">
-              <div class="icon"><i class="bi bi-gem"></i></div>
+              <!-- <div class="icon"><i class="bi bi-gem"></i></div> -->
               <h4 class="title"><a href="" class="stretched-link">Sed ut perspiciatis</a></h4>
             </div>
           </div>
 
           <div class="col-xl-3 col-md-6" data-aos="fade-up" data-aos-delay="300">
             <div class="icon-box">
-              <div class="icon"><i class="bi bi-geo-alt"></i></div>
+              <!-- <div class="icon"><i class="bi bi-geo-alt"></i></div> -->
               <h4 class="title"><a href="" class="stretched-link">Magni Dolores</a></h4>
             </div>
           </div>
 
           <div class="col-xl-3 col-md-6" data-aos="fade-up" data-aos-delay="500">
             <div class="icon-box">
-              <div class="icon"><i class="bi bi-command"></i></div>
+              <!-- <div class="icon"><i class="bi bi-command"></i></div> -->
               <h4 class="title"><a href="" class="stretched-link">Nemo Enim</a></h4>
             </div>
-          </div> -->
+          </div>
 
         </div>
       </div>
     </div>
-
-    </div>
+    <div class="row">1</div>
   </section>
   <!-- End Hero Section -->
 
-
+  <div class="container-fluid">
+    <div class="row">1
+    </div>
+    <div class="row" style="background-color: aqua;">2</div>
+  </div>
 
 <!-- 
   IP Address Tracker
