--- a/index.html
+++ b/index.html
@@ -1,101 +1,183 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  
+    <meta charset="utf-8" />
+    <meta content="width=device-width, initial-scale=1.0" name="viewport" />
+
     <title>IP Address Tracker</title>
-    <meta content="" name="description">
-    <meta content="" name="keywords">
-  
+    <meta content="" name="description" />
+    <meta content="" name="keywords" />
+
     <!-- Favicons -->
-    <link href="assets/img/favicon.png" rel="icon">
-    <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
-  
+    <link href="assets/img/favicon.png" rel="icon" />
+    <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon" />
+
     <!-- Google Fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,600;1,700&family=Montserrat:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Raleway:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
-  
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,600;1,700&family=Montserrat:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Raleway:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap"
+      rel="stylesheet"
+    />
+
     <!-- Vendor CSS Files -->
-    <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
-    <link href="assets/vendor/aos/aos.css" rel="stylesheet">
-    <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
-    <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
-  
+    <link
+      href="assets/vendor/bootstrap/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+    <link
+      href="assets/vendor/bootstrap-icons/bootstrap-icons.css"
+      rel="stylesheet"
+    />
+    <link href="assets/vendor/aos/aos.css" rel="stylesheet" />
+    <link
+      href="assets/vendor/glightbox/css/glightbox.min.css"
+      rel="stylesheet"
+    />
+    <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet" />
+
     <!-- Template Main CSS File -->
-    <link href="assets/css/main.css" rel="stylesheet">
+    <link href="assets/css/main.css" rel="stylesheet" />
+    <link href="assets/css/style.css" rel="stylesheet" />
   </head>
-<body>
 
-
-  <!-- ======= Hero Section ======= -->
-  <section id="hero" class="hero">
-    <div class="container position-relative">
-      <div class="row gy-5" data-aos="fade-in">
-        <div class="col-lg-6 order-2 order-lg-1 d-flex flex-column justify-content-center text-center text-lg-start">
-          <h2 class="text-center">IP Address Tracker</h2>
-          <p>Sed autem laudantium dolores. Voluptatem itaque ea consequatur eveniet. Eum quas beatae cumque eum quaerat.</p> 
-          <div class="d-flex justify-content-center justify-content-lg-start">
-            <a href="#about" class="btn-get-started">Get Started</a>
-            <a href="https://www.youtube.com/watch?v=LXb3EKWsInQ" class="glightbox btn-watch-video d-flex align-items-center"><i class="bi bi-play-circle"></i><span>Watch Video</span></a>
-          </div>
-        </div>
-         <div class="col-lg-6 order-1 order-lg-2">
-          <img src="assets/img/hero-img.svg" class="img-fluid" alt="" data-aos="zoom-out" data-aos-delay="100">
-        </div> 
-      </div>
-    </div>
-
-    <div class="icon-boxes position-relative">
+  <body>
+    <!-- ======= Hero Section ======= -->
+    <!-- <section id="hero" class="hero">
       <div class="container position-relative">
-        <div class="row gy-4 mt-5">
-          <!-- data-aos="fade-up" data-aos-delay="100" -->
-          <div class="col-xl-3 col-md-6" data-aos="fade-up" data-aos-delay="200">
-
-            <div class="icon-box">
-              <!-- <div class="icon"><i class="bi bi-easel"></i></div> -->
-              <h4 class="title"><a href="" class="stretched-link">IP Address</a></h4>
-            </div>
-
-          </div><!--End Icon Box -->
-
-          <div class="col-xl-3 col-md-6" data-aos="fade-up" data-aos-delay="200">
-            <div class="icon-box">
-              <!-- <div class="icon"><i class="bi bi-gem"></i></div> -->
-              <h4 class="title"><a href="" class="stretched-link">Sed ut perspiciatis</a></h4>
-            </div>
-          </div>
-
-          <div class="col-xl-3 col-md-6" data-aos="fade-up" data-aos-delay="300">
-            <div class="icon-box">
-              <!-- <div class="icon"><i class="bi bi-geo-alt"></i></div> -->
-              <h4 class="title"><a href="" class="stretched-link">Magni Dolores</a></h4>
+        <div class="row gy-5" data-aos="fade-in">
+          <div
+            class="col-lg-6 order-2 order-lg-1 d-flex flex-column justify-content-center text-center text-lg-start"
+          >
+            <h2 class="text-center">IP Address Tracker</h2>
+            <p>
+              Sed autem laudantium dolores. Voluptatem itaque ea consequatur
+              eveniet. Eum quas beatae cumque eum quaerat.
+            </p>
+            <div class="d-flex justify-content-center justify-content-lg-start">
+              <a href="#about" class="btn-get-started">Get Started</a>
+              <a
+                href="https://www.youtube.com/watch?v=LXb3EKWsInQ"
+                class="glightbox btn-watch-video d-flex align-items-center"
+                ><i class="bi bi-play-circle"></i><span>Watch Video</span></a
+              >
             </div>
           </div>
-
-          <div class="col-xl-3 col-md-6" data-aos="fade-up" data-aos-delay="500">
-            <div class="icon-box">
-              <!-- <div class="icon"><i class="bi bi-command"></i></div> -->
-              <h4 class="title"><a href="" class="stretched-link">Nemo Enim</a></h4>
-            </div>
+          <div class="col-lg-6 order-1 order-lg-2">
+            <img
+              src="assets/img/hero-img.svg"
+              class="img-fluid"
+              alt=""
+              data-aos="zoom-out"
+              data-aos-delay="100"
+            />
           </div>
-
         </div>
       </div>
-    </div>
-    <div class="row">1</div>
-  </section>
-  <!-- End Hero Section -->
 
-  <div class="container-fluid">
-    <div class="row">1
-    </div>
-    <div class="row" style="background-color: aqua;">2</div>
-  </div>
+      <div class="icon-boxes position-relative">
+        <div class="container position-relative">
+          <div class="row gy-4 mt-5">
+            <div
+              class="col-xl-3 col-md-6"
+              data-aos="fade-up"
+              data-aos-delay="200"
+            >
+              <div class="icon-box">
+                <div class="icon"><i class="bi bi-easel"></i></div>
+                <h4 class="title">
+                  <a href="" class="stretched-link">IP Address</a>
+                </h4>
+              </div>
+            </div>
 
-<!-- 
+            <div
+              class="col-xl-3 col-md-6"
+              data-aos="fade-up"
+              data-aos-delay="200"
+            >
+              <div class="icon-box">
+                <div class="icon"><i class="bi bi-gem"></i></div>
+                <h4 class="title">
+                  <a href="" class="stretched-link">Sed ut perspiciatis</a>
+                </h4>
+              </div>
+            </div>
+
+            <div
+              class="col-xl-3 col-md-6"
+              data-aos="fade-up"
+              data-aos-delay="300"
+            >
+              <div class="icon-box">
+                <div class="icon"><i class="bi bi-geo-alt"></i></div>
+                <h4 class="title">
+                  <a href="" class="stretched-link">Magni Dolores</a>
+                </h4>
+              </div>
+            </div>
+
+            <div
+              class="col-xl-3 col-md-6"
+              data-aos="fade-up"
+              data-aos-delay="500"
+            >
+              <div class="icon-box">
+                <div class="icon"><i class="bi bi-command"></i></div>
+                <h4 class="title">
+                  <a href="" class="stretched-link">Nemo Enim</a>
+                </h4>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="row">1</div>
+    </section> -->
+    <!-- End Hero Section -->
+
+    <main>
+      <div class="top">
+        <h1 class="title fw-semibold">IP Address Tracker</h1>
+        <form action="" autocomplete="off">
+          <input
+            type="text"
+            id="ip-input"
+            autofocus
+            placeholder="Search for any IP address or domain"
+          />
+          <button type="submit">
+            <img src="images/icon-arrow.svg" alt="Submit Button" />
+          </button>
+        </form>
+        <div class="info" id="info" data-aos="fade-up" data-aos-delay="50">
+          <div class="box ip-info-box">
+            <span class="field-name fw-semibold">ip address</span>
+            <span class="info-field" id="ip-info"></span>
+          </div>
+          <div class="box location-info-box">
+            <span class="field-name fw-semibold">location</span>
+            <span class="info-field" id="location-info"></span>
+          </div>
+          <div class="box timezone-info-box">
+            <span class="field-name fw-semibold">timezone</span>
+            <span class="info-field" id="timezone-info"></span>
+          </div>
+          <div class="box isp-info-box">
+            <span class="field-name fw-semibold">isp</span>
+            <span class="info-field" id="isp-info"></span>
+          </div>
+        </div>
+      </div>
+      <!-- <dialog id="modal">
+        <h3><i class="fas fa-exclamation-triangle"></i> OH SNAP</h3>
+        <p id="error-message"></p>
+        <button id="close-btn">Close</button>
+      </dialog> -->
+      <div id="map"></div>
+    </main>
+
+    <!--
   IP Address Tracker
 
   Search for any IP address or domain
@@ -104,13 +186,12 @@
   Location
   Timezone
   UTC
-  ISP 
+  ISP
 -->
-  <!-- add offset value dynamically using the API -->
-  
+    <!-- add offset value dynamically using the API -->
 
-  <!-- <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+    <!-- <div class="attribution">
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
     Coded by <a href="#">Abdul Muqtadir</a>.
   </div> -->
 
@@ -122,9 +203,9 @@
     <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
     <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
     <script src="assets/vendor/php-email-form/validate.js"></script>
-  
+
     <!-- Template Main JS File -->
     <script src="assets/js/main.js"></script>
-
-</body>
+    <script src="assets/js/script.js"></script>
+  </body>
 </html>
