--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
     <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon" />
 
     <!-- Google Fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <!-- <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,600;1,700&family=Montserrat:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Raleway:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap"
       rel="stylesheet"
-    />
+    /> -->
 
     <!-- Vendor CSS Files -->
     <link
@@ -36,106 +36,12 @@
     />
     <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet" />
 
-    <!-- Template Main CSS File -->
     <link href="assets/css/main.css" rel="stylesheet" />
     <link href="assets/css/style.css" rel="stylesheet" />
   </head>
 
   <body>
-    <!-- ======= Hero Section ======= -->
-    <!-- <section id="hero" class="hero">
-      <div class="container position-relative">
-        <div class="row gy-5" data-aos="fade-in">
-          <div
-            class="col-lg-6 order-2 order-lg-1 d-flex flex-column justify-content-center text-center text-lg-start"
-          >
-            <h2 class="text-center">IP Address Tracker</h2>
-            <p>
-              Sed autem laudantium dolores. Voluptatem itaque ea consequatur
-              eveniet. Eum quas beatae cumque eum quaerat.
-            </p>
-            <div class="d-flex justify-content-center justify-content-lg-start">
-              <a href="#about" class="btn-get-started">Get Started</a>
-              <a
-                href="https://www.youtube.com/watch?v=LXb3EKWsInQ"
-                class="glightbox btn-watch-video d-flex align-items-center"
-                ><i class="bi bi-play-circle"></i><span>Watch Video</span></a
-              >
-            </div>
-          </div>
-          <div class="col-lg-6 order-1 order-lg-2">
-            <img
-              src="assets/img/hero-img.svg"
-              class="img-fluid"
-              alt=""
-              data-aos="zoom-out"
-              data-aos-delay="100"
-            />
-          </div>
-        </div>
-      </div>
-
-      <div class="icon-boxes position-relative">
-        <div class="container position-relative">
-          <div class="row gy-4 mt-5">
-            <div
-              class="col-xl-3 col-md-6"
-              data-aos="fade-up"
-              data-aos-delay="200"
-            >
-              <div class="icon-box">
-                <div class="icon"><i class="bi bi-easel"></i></div>
-                <h4 class="title">
-                  <a href="" class="stretched-link">IP Address</a>
-                </h4>
-              </div>
-            </div>
-
-            <div
-              class="col-xl-3 col-md-6"
-              data-aos="fade-up"
-              data-aos-delay="200"
-            >
-              <div class="icon-box">
-                <div class="icon"><i class="bi bi-gem"></i></div>
-                <h4 class="title">
-                  <a href="" class="stretched-link">Sed ut perspiciatis</a>
-                </h4>
-              </div>
-            </div>
-
-            <div
-              class="col-xl-3 col-md-6"
-              data-aos="fade-up"
-              data-aos-delay="300"
-            >
-              <div class="icon-box">
-                <div class="icon"><i class="bi bi-geo-alt"></i></div>
-                <h4 class="title">
-                  <a href="" class="stretched-link">Magni Dolores</a>
-                </h4>
-              </div>
-            </div>
-
-            <div
-              class="col-xl-3 col-md-6"
-              data-aos="fade-up"
-              data-aos-delay="500"
-            >
-              <div class="icon-box">
-                <div class="icon"><i class="bi bi-command"></i></div>
-                <h4 class="title">
-                  <a href="" class="stretched-link">Nemo Enim</a>
-                </h4>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="row">1</div>
-    </section> -->
-    <!-- End Hero Section -->
-
+ 
     <main>
       <div class="top">
         <h1 class="title fw-semibold">IP Address Tracker</h1>
@@ -198,11 +104,13 @@
     <!-- Vendor JS Files -->
     <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
     <script src="assets/vendor/aos/aos.js"></script>
+    <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
     <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
     <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
-    <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
-    <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
-    <script src="assets/vendor/php-email-form/validate.js"></script>
+    <!-- 
+      <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
+    <script src="assets/vendor/php-email-form/validate.js"></script> 
+  -->
 
     <!-- Template Main JS File -->
     <script src="assets/js/main.js"></script>
