--- a/index.html
+++ b/index.html
@@ -35,6 +35,10 @@
       rel="stylesheet"
     />
     <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet" />
+    <link rel="stylesheet" href="assets/sweet_alert/sweet_alert2.min.css">
+
+    <link rel="stylesheet" href="assets/leaflet/leaflet.css">
+    <script src="assets/leaflet/leaflet.js"></script>
 
     <link href="assets/css/main.css" rel="stylesheet" />
     <link href="assets/css/style.css" rel="stylesheet" />
@@ -45,7 +49,7 @@
     <main>
       <div class="top">
         <h1 class="title fw-semibold">IP Address Tracker</h1>
-        <form action="" autocomplete="off">
+        <form id="form" autocomplete="off">
           <input
             type="text"
             id="ip-input"
@@ -83,6 +87,10 @@
       <div id="map"></div>
     </main>
 
+
+    <!-- ? Pop up Modal -- Start -->
+    <!-- ? Pop up Modal -- End -->
+
     <!--
   IP Address Tracker
 
@@ -112,7 +120,9 @@
     <script src="assets/vendor/php-email-form/validate.js"></script> 
   -->
 
-    <!-- Template Main JS File -->
+  <script src="assets/sweet_alert/sweet_alert2.all.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
+    
     <script src="assets/js/main.js"></script>
     <script src="assets/js/script.js"></script>
   </body>
