--- a/index.html
+++ b/index.html
@@ -35,7 +35,10 @@
       rel="stylesheet"
     />
     <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet" />
+
     <link rel="stylesheet" href="assets/sweet_alert/sweet_alert2.min.css">
+    <link rel="stylesheet" href="assets/iziToast/dist/css/iziToast.min.css">
+
 
     <link rel="stylesheet" href="assets/leaflet/leaflet.css">
     <script src="assets/leaflet/leaflet.js"></script>
@@ -119,7 +122,7 @@
       <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
     <script src="assets/vendor/php-email-form/validate.js"></script> 
   -->
-
+  <script src="assets/iziToast/dist/js/iziToast.min.js"></script>
   <script src="assets/sweet_alert/sweet_alert2.all.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
     
