--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="utf-8" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
 
@@ -21,78 +22,60 @@
     /> -->
 
     <!-- Vendor CSS Files -->
-    <link
-      href="assets/vendor/bootstrap/css/bootstrap.min.css"
-      rel="stylesheet"
-    />
-    <link
-      href="assets/vendor/bootstrap-icons/bootstrap-icons.css"
-      rel="stylesheet"
-    />
+    <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet" />
     <link href="assets/vendor/aos/aos.css" rel="stylesheet" />
-    <link
-      href="assets/vendor/glightbox/css/glightbox.min.css"
-      rel="stylesheet"
-    />
+    <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet" />
     <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet" />
 
     <link rel="stylesheet" href="assets/sweet_alert/sweet_alert2.min.css">
     <link rel="stylesheet" href="assets/iziToast/dist/css/iziToast.min.css">
-
 
     <link rel="stylesheet" href="assets/leaflet/leaflet.css">
     <script src="assets/leaflet/leaflet.js"></script>
 
     <link href="assets/css/main.css" rel="stylesheet" />
     <link href="assets/css/style.css" rel="stylesheet" />
-  </head>
+</head>
 
-  <body>
- 
+<body>
+  <div id="cover-spin"></div>
     <main>
-      <div class="top">
-        <h1 class="title fw-semibold">IP Address Tracker</h1>
-        <form id="form" autocomplete="off">
-          <input
-            type="text"
-            id="ip-input"
-            autofocus
-            placeholder="Search for any IP address or domain"
-          />
-          <button type="submit">
-            <img src="images/icon-arrow.svg" alt="Submit Button" />
-          </button>
-        </form>
-        <div class="info" id="info" data-aos="fade-up" data-aos-delay="50">
-          <div class="box ip-info-box">
-            <span class="field-name fw-semibold">ip address</span>
-            <span class="info-field" id="ip-info"></span>
-          </div>
-          <div class="box location-info-box">
-            <span class="field-name fw-semibold">location</span>
-            <span class="info-field" id="location-info"></span>
-          </div>
-          <div class="box timezone-info-box">
-            <span class="field-name fw-semibold">timezone</span>
-            <span class="info-field" id="timezone-info"></span>
-          </div>
-          <div class="box isp-info-box">
-            <span class="field-name fw-semibold">isp</span>
-            <span class="info-field" id="isp-info"></span>
-          </div>
+        <div class="top">
+            <h1 class="title fw-semibold">IP Address Tracker</h1>
+            <form id="form" autocomplete="off">
+                <input type="text" id="ip-input" autofocus placeholder="Search for any IP address or domain" />
+                <button type="submit">
+                    <img src="images/icon-arrow.svg" alt="Submit Button" />
+                </button>
+            </form>
+            <div class="info" id="info" data-aos="fade-up" data-aos-delay="50">
+                <div class="box ip-info-box">
+                    <span class="field-name fw-semibold">ip address</span>
+                    <span class="info-field" id="ip-info"></span>
+                </div>
+                <div class="box location-info-box">
+                    <span class="field-name fw-semibold">location</span>
+                    <span class="info-field" id="location-info"></span>
+                </div>
+                <div class="box timezone-info-box">
+                    <span class="field-name fw-semibold">timezone</span>
+                    <span class="info-field" id="timezone-info"></span>
+                </div>
+                <div class="box isp-info-box">
+                    <span class="field-name fw-semibold">isp</span>
+                    <span class="info-field" id="isp-info"></span>
+                </div>
+            </div>
         </div>
-      </div>
-      <!-- <dialog id="modal">
+        <!-- <dialog id="modal">
         <h3><i class="fas fa-exclamation-triangle"></i> OH SNAP</h3>
         <p id="error-message"></p>
         <button id="close-btn">Close</button>
       </dialog> -->
-      <div id="map"></div>
+        <div id="map"></div>
     </main>
 
-
-    <!-- ? Pop up Modal -- Start -->
-    <!-- ? Pop up Modal -- End -->
 
     <!--
   IP Address Tracker
@@ -112,21 +95,26 @@
     Coded by <a href="#">Abdul Muqtadir</a>.
   </div> -->
 
+
+
     <!-- Vendor JS Files -->
     <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
     <script src="assets/vendor/aos/aos.js"></script>
     <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
     <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
     <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
-    <!-- 
+    <!--
       <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
-    <script src="assets/vendor/php-email-form/validate.js"></script> 
+    <script src="assets/vendor/php-email-form/validate.js"></script>
   -->
-  <script src="assets/iziToast/dist/js/iziToast.min.js"></script>
-  <script src="assets/sweet_alert/sweet_alert2.all.min.js"></script>
-    <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
-    
+    <script src="assets/iziToast/dist/js/iziToast.min.js"></script>
+    <script src="assets/sweet_alert/sweet_alert2.all.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js"
+        integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
+
     <script src="assets/js/main.js"></script>
     <script src="assets/js/script.js"></script>
-  </body>
+
+</body>
+
 </html>
