--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <div class="top">
             <h1 class="title fw-semibold">IP Address Tracker</h1>
             <form id="form" autocomplete="off">
-                <input type="text" id="ip-input" autofocus placeholder="Search for any IP address or domain" />
+                <input type="text" id="ip-input" autofocus placeholder="Search for any IP address" />
                 <button type="submit">
                     <img src="images/icon-arrow.svg" alt="Submit Button" />
                 </button>
